fix margin bug and photo alignment in about section

--- a/scss/styles.scss
+++ b/scss/styles.scss
@@ -550,7 +550,8 @@ svg.logo--menu {
 .c-header, .c-about {
   display: flex;
   flex-wrap: wrap;
-  justify-content: flex-end;
+  justify-content: space-between;
+  margin-bottom: 2rem;
   @include media-query3 {
     margin-bottom: 3rem;
   }
@@ -806,6 +807,8 @@ footer li {
   float: left;
   width: calc(45% - 1rem);
   margin-right: 1rem;
+  position: relative;
+  top: 6px;
   @include media-query3 {
     margin-right: 2rem;
     width: calc(45% - 2rem);
